<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006BCE"
    android:orientation="vertical"
    tools:context=".SignIn">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/heading"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/explore"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"></TextView>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:hint="@string/user_id"
        android:background="@drawable/signup_effect"
        android:textSize="27sp"
        android:padding="20dp"
        android:drawableStart="@drawable/baseline_person_4_24"
        android:drawablePadding="30dp"
        app:helperText="Required"
        android:autofillHints="emailAddress"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="50dp"
        android:ems="15"
        android:inputType="textEmailAddress" >
    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:hint="@string/password"
        android:layout_marginTop="40dp"
        android:background="@drawable/signup_effect"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="40dp"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="@color/Black"
            android:textSize="27sp"
            android:padding="20dp"
            android:inputType="textPassword"
            android:drawablePadding="30dp"
            android:drawableStart="@drawable/lock"
            app:helperText="*Required">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="210dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="20dp"
            android:contextClickable="true"
            android:fontFamily="serif"
            android:text="@string/forget"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>

        <CheckBox
            android:id="@+id/checkboxx"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/agreement"
            android:textColor="@color/white"
            android:textSize="14sp" />
        </RelativeLayout>
    <Button
        android:id="@+id/Login_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:background="@drawable/button_effect"
        android:layout_marginTop="30dp"
        android:textColor="@color/Black"
        android:layout_gravity="center"
        android:fontFamily="serif">

    </Button>

    <TextView
        android:id="@+id/just_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:contextClickable="true"
        android:fontFamily="serif"
        android:text="@string/new_here"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="bold">

    </TextView>
    <ImageButton
        android:id="@+id/goolelogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/outlookk"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@string/outlook"
        android:layout_marginTop="20dp">
    </ImageButton>
    </LinearLayout>

