<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#006BCE"
    tools:context=".ForgetActitvity">
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@color/white"
        android:layout_marginTop="30dp"
        app:civ_border_width="10dp"
        android:layout_marginStart="100dp">

    </de.hdodenhof.circleimageview.CircleImageView>


    <TextView
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:text="@string/enter_otp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/otp1"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:fontFamily="serif"
            android:maxLength="1">

        </EditText>

        <EditText
            android:id="@+id/otp2"
            android:layout_width="69dp"
            android:layout_height="70dp"
            android:layout_marginStart="40dp"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:fontFamily="serif"
            android:maxLength="1">


        </EditText>

        <EditText
            android:id="@+id/otp3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:inputType="number"
            android:textSize="14sp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:maxLength="1">


        </EditText>

        <EditText
            android:id="@+id/otp4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:inputType="number"
            android:layout_marginStart="30dp"
            android:imeOptions="actionNext"
            android:textSize="14sp"
            android:importantForAutofill="no"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:maxLength="1">
        </EditText>
    </LinearLayout>

   <EditText
       android:layout_width="400dp"
       android:layout_height="60dp"
       android:text="@string/resend"
       android:layout_marginTop="520dp"
       android:importantForAutofill="no"
       android:inputType="textCapSentences"
       android:textColor="@color/white"
       android:textSize="20sp"
       android:layout_marginStart="20dp">

   </EditText>
    <Button
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="630dp"
        android:background="@drawable/signup_effect"
        android:layout_marginStart="150dp"
        android:text="@string/done"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="serif">

    </Button>




</RelativeLayout>